Bug 281365 - date field cannot be fully completed
Summary: date field cannot be fully completed
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.3.3
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-05 07:57 UTC by Tim
Modified: 2011-09-19 01:36 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.3.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tim 2011-09-05 07:57:09 UTC
Version:           2.3.3 (using KDE 4.7.0) 
OS:                Linux

When I try to add a date there are problems: The dropdown box for the month does not contain any options.  When viewing the completed date in the view area, only the year is shown.  I haven't used Tellico in a few months... this problem didn't exist before.

Reproducible: Always

Steps to Reproduce:
open the editor and enter a date in the appropriate fields - can't fill in month
OR open an item that already contains a date... the month will not show (even though it shows in the view summary)

Actual Results:  
cannot fully complete the month, day and year and the view only shows the year (unless viewing an older item that was entered before the problem started)

Expected Results:  
fill in the month, day and year of the date fields

OS: Linux (x86_64) release 2.6.38-11-generic
Compiler: gcc
Comment 1 Robby Stephenson 2011-09-05 21:07:40 UTC
(In reply to comment #0)
> Version:           2.3.3 (using KDE 4.7.0) 
> OS:                Linux
> 
> When I try to add a date there are problems: The dropdown box for the month
> does not contain any options.  When viewing the completed date in the view
> area, only the year is shown.

Near as I can tell from the couple of reports, this is some sort of bug with Tellico when using KDE 4.7.0. I haven't upgraded to 4.7 yet, so I can't reproduce. Once I do, I can test...
Comment 2 Robby Stephenson 2011-09-19 01:36:22 UTC
Git commit 85ad1f0dff3e9d8dda5a934d0253598922edfa09 by Robby Stephenson.
Committed on 19/09/2011 at 02:29.
Pushed by rstephenson into branch '2.3'.

Fix bug when editing the month field in the date widget in KDE 4.7

Be sure to use a valid QDate when querying the KCalendarSystem for the
month name.
BUG: 281365
FIXED-IN: 2.3.4

M  +4    -0    ChangeLog
M  +1    -1    src/gui/datewidget.cpp

http://commits.kde.org/tellico/85ad1f0dff3e9d8dda5a934d0253598922edfa09