Fix bug when editing the month field in the date widget in KDE 4.7

Be sure to use a valid QDate when querying the KCalendarSystem for the
month name.
BUG: 281365
FIXED-IN: 2.3.4